--- a/HotelsAppCRUD/templates/HotelsAppCRUD/Service/room_service_delete.html
+++ b/HotelsAppCRUD/templates/HotelsAppCRUD/Service/room_service_delete.html
@@ -34,14 +34,14 @@
             </div>
         </section>
         <!--================Breadcrumb Area =================-->
-
-<p>Confirm Delete</p>
  {% block content %}
+<div class="container-fluid">
 <form action="" method="POST">
     {% csrf_token %}
     <h1>Confirm Delete the following "{{ object.service_id }} {{ object.service_description }}"</h1>
     <p><input type='Submit' value='Yes'/><a href="../"> Cancel</a></p>
 </form>
+</div>
 {% endblock %}
         <!--================ start footer Area  =================-->
         <footer class="footer-area section_gap">
