--- a/HotelsAppCRUD/templates/HotelsAppCRUD/Service/room_service_list.html
+++ b/HotelsAppCRUD/templates/HotelsAppCRUD/Service/room_service_list.html
@@ -34,9 +34,9 @@
             </div>
         </section>
         <!--================Breadcrumb Area =================-->
-
-{% block content %}
+  {% block content %}
   <h1>Room Service List</h1>
+<div class="container-fluid">
   {% if service_list %}
    <table class="table table-hover">
       <thead>
@@ -59,6 +59,7 @@
   {% else %}
      <p>There are no Room Service in the database.</p>
   {% endif %}
+</div>
 {% endblock %}
 </body>
 </html>
