--- a/HotelsAppCRUD/templates/HotelsAppCRUD/Billing/room_billing_list.html
+++ b/HotelsAppCRUD/templates/HotelsAppCRUD/Billing/room_billing_list.html
@@ -35,6 +35,7 @@
         <!--================Breadcrumb Area =================-->
 {% block content %}
   <h1>Room Billing List</h1>
+<div class="container-fluid">
   {% if billing_list %}
    <table class="table table-hover">
       <thead>
@@ -57,6 +58,7 @@
   {% else %}
      <p>There are no Room Billing in the database.</p>
   {% endif %}
+</div>
 {% endblock %}
          <!--================ start footer Area  =================-->
         <footer class="footer-area section_gap">
