--- a/HotelsAppCRUD/templates/HotelsAppCRUD/Customers/customer_list.html
+++ b/HotelsAppCRUD/templates/HotelsAppCRUD/Customers/customer_list.html
@@ -34,9 +34,9 @@
             </div>
         </section>
         <!--================Breadcrumb Area =================-->
-<p>Customer Maintenance Database</p>
 {% block content %}
   <h1>Customer List</h1>
+<div class="container-fluid">
   {% if customer_list %}
    <table class="table table-hover">
       <thead>
@@ -59,6 +59,7 @@
   {% else %}
      <p>There are no Customers in the database.</p>
   {% endif %}
+</div>
 {% endblock %}
         <!--================ start footer Area  =================-->
         <footer class="footer-area section_gap">
