--- a/HotelsAppCRUD/templates/HotelsAppCRUD/Hotels/hotel_delete.html
+++ b/HotelsAppCRUD/templates/HotelsAppCRUD/Hotels/hotel_delete.html
@@ -33,13 +33,14 @@
             </div>
         </section>
         <!--================Breadcrumb Area =================-->
-<p>Confirm Delete</p>
  {% block content %}
+<div class="container-fluid">
 <form action="" method="POST">
     {% csrf_token %}
     <h1>Confirm Delete the following "{{ object.hotel_id }} {{ object.name }}"</h1>
     <p><input type='Submit' value='Yes'/><a href="../"> Cancel</a></p>
 </form>
+</div>
 {% endblock %}
         <!--================ start footer Area  =================-->
         <footer class="footer-area section_gap">
