--- a/HotelsAppCRUD/templates/HotelsAppCRUD/Hotels/hotel_list.html
+++ b/HotelsAppCRUD/templates/HotelsAppCRUD/Hotels/hotel_list.html
@@ -35,6 +35,7 @@
         <!--================Breadcrumb Area =================-->
 {% block content %}
   <h1>Hotel List</h1>
+<div class="container-fluid">
   {% if hotel_list %}
    <table class="table table-hover">
       <thead>
@@ -57,6 +58,7 @@
   {% else %}
      <p>There are no Hotels in the database.</p>
   {% endif %}
+</div>
 {% endblock %}
         <!--================ start footer Area  =================-->
         <footer class="footer-area section_gap">
