--- a/HotelsAppCRUD/templates/HotelsAppCRUD/Reservation/room_reservation_list.html
+++ b/HotelsAppCRUD/templates/HotelsAppCRUD/Reservation/room_reservation_list.html
@@ -36,6 +36,7 @@
         <!--================Breadcrumb Area =================-->
 {% block content %}
   <h1>Reservation List</h1>
+<div class="container-fluid">
   {% if reservation_list %}
    <table class="table table-hover">
       <thead>
@@ -58,6 +59,7 @@
   {% else %}
      <p>There are no Reservation in the database.</p>
   {% endif %}
+</div>
 {% endblock %}
         <!--================ start footer Area  =================-->
         <footer class="footer-area section_gap">
