--- a/HotelsAppCRUD/templates/HotelsAppCRUD/Rooms/room_delete.html
+++ b/HotelsAppCRUD/templates/HotelsAppCRUD/Rooms/room_delete.html
@@ -35,11 +35,13 @@
         </section>
         <!--================Breadcrumb Area =================-->
 {% block content %}
+<div class="container-fluid">
 <form action="" method="POST">
     {% csrf_token %}
     <h1>Confirm Delete the following "{{ object.room_id }} {{ object.room_number }}"</h1>
     <p><input type='Submit' value='Yes'/><a href="../"> Cancel</a></p>
 </form>
+</div>
 {% endblock %}
         <!--================ start footer Area  =================-->
         <footer class="footer-area section_gap">
