Thirty Fourth deployment modifications in GUI to make it more friendly
Signed-off-by: hbono2019 <D18129993@mytudublin.ie>

--- a/HotelsAppCRUD/templates/HotelsAppCRUD/Reservation/room_reservation_public_list.html
+++ b/HotelsAppCRUD/templates/HotelsAppCRUD/Reservation/room_reservation_public_list.html
@@ -61,7 +61,7 @@
                                           <h4 class="modal-title">Cancel Room Booking</h4>
                                 </div>
                                 <div class="modal-body">
-                                     <p>Please Contact our Customer Service (0818) 123 456</p>
+                                     <p>Please Contact our Royal Hotel Customer Service (0818) 123 456</p>
                                 </div>
                                 <div class="modal-footer">
                                     <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
