Thirty Sixth deployment added Glyph icons
Signed-off-by: hbono2019 <D18129993@mytudublin.ie>

--- a/HotelsAppCRUD/templates/HotelsAppCRUD/Reservation/index_pub.html
+++ b/HotelsAppCRUD/templates/HotelsAppCRUD/Reservation/index_pub.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
+       <meta charset="UTF-8">
        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         {% load static %}
         <link rel="icon" href="{% static 'image/favicon.png' %}" type="image/png">
@@ -34,6 +34,7 @@
             </div>
         </section>
         <!--================Breadcrumb Area =================-->
+<div class="container-fluid">
 <table class="table table-hover">
   <thead>
     <tr>
@@ -52,6 +53,7 @@
     </tr>
   </tbody>
 </table>
+</div>
         <!--================ start footer Area  =================-->
         <footer class="footer-area section_gap">
             <div class="container">
