--- a/HotelsAppCRUD/templates/HotelsAppCRUD/Hotels/index.html
+++ b/HotelsAppCRUD/templates/HotelsAppCRUD/Hotels/index.html
@@ -34,7 +34,7 @@
             </div>
         </section>
         <!--================Breadcrumb Area =================-->
-<p>Hotels Maintenance Database</p>
+<div class="container-fluid">
 <table class="table table-hover">
   <thead>
     <tr>
@@ -53,6 +53,7 @@
     </tr>
   </tbody>
 </table>
+</div>
         <!--================ start footer Area  =================-->
         <footer class="footer-area section_gap">
             <div class="container">
