--- a/HotelsAppCRUD/templates/HotelsAppCRUD/Reservation/index.html
+++ b/HotelsAppCRUD/templates/HotelsAppCRUD/Reservation/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-       <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         {% load static %}
         <link rel="icon" href="{% static 'image/favicon.png' %}" type="image/png">
         <title>Royal Hotel</title>
@@ -34,6 +34,7 @@
             </div>
         </section>
         <!--================Breadcrumb Area =================-->
+<div class="container-fluid">
 <table class="table table-hover">
   <thead>
     <tr>
@@ -52,6 +53,7 @@
     </tr>
   </tbody>
 </table>
+</div>
         <!--================ start footer Area  =================-->
         <footer class="footer-area section_gap">
             <div class="container">
