--- a/HotelsAppCRUD/templates/HotelsAppCRUD/Service/index.html
+++ b/HotelsAppCRUD/templates/HotelsAppCRUD/Service/index.html
@@ -34,6 +34,7 @@
             </div>
         </section>
         <!--================Breadcrumb Area =================-->
+<div class="container-fluid">
 <table class="table table-hover">
   <thead>
     <tr>
@@ -52,7 +53,7 @@
     </tr>
   </tbody>
 </table>
-</body>
+</div>
         <!--================ start footer Area  =================-->
         <footer class="footer-area section_gap">
             <div class="container">
@@ -148,4 +149,5 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
         <script src="{% static 'js/stellar.js' %}"></script>
         <script src="{% static 'vendors/lightbox/simpleLightbox.min.js' %}"></script>
         <script src="{% static 'js/custom.js' %}"></script>
+</body>
 </html>
