--- a/HotelsAppCRUD/templates/HotelsAppCRUD/index.html
+++ b/HotelsAppCRUD/templates/HotelsAppCRUD/index.html
@@ -34,6 +34,7 @@
             </div>
         </section>
         <!--================Breadcrumb Area =================-->
+<div class="container-fluid">
 <table class="table table-hover">
   <thead>
     <tr>
@@ -72,6 +73,7 @@
     </tr>
   </tbody>
 </table>
+</div>
         <!--================ start footer Area  =================-->
         <footer class="footer-area section_gap">
             <div class="container">
