--- a/HotelsAppCRUD/templates/HotelsAppCRUD/Billing/room_billing_list.html
+++ b/HotelsAppCRUD/templates/HotelsAppCRUD/Billing/room_billing_list.html
@@ -51,10 +51,10 @@
       <tbody>
        {% for billing in billing_list %}
         <tr>
-           <th scope="row">{{ hotel.name}}</th>
+           <th scope="row">{{billing.reservation_id}} {{billing.reservation_id}} {{ billing.invoice_no}}</th>
                <td> <a href="{% url 'HotelsAppCRUD:room_billing_detail' pk=billing.reservation_id %}" class="btn btn-info btn-block" role="button">Detail</a> </td>
-               <td> <a href="{% url 'HotelsAppCRUD:room_billing__update' pk=billing.reservation_id %}" class="btn btn-info btn-block" role="button">Update</a> </td>
-               <td> <a href="{% url 'HotelsAppCRUD:room_billing__delete' pk=billing.reservation_id %}" class="btn btn-info btn-block" role="button">Delete<span class="glyphicon glyphicon-trash"></span> </a> </td>
+               <td> <a href="{% url 'HotelsAppCRUD:room_billing_update' pk=billing.reservation_id %}" class="btn btn-info btn-block" role="button">Update</a> </td>
+               <td> <a href="{% url 'HotelsAppCRUD:room_billing_delete' pk=billing.reservation_id %}" class="btn btn-info btn-block" role="button">Delete<span class="glyphicon glyphicon-trash"></span> </a> </td>
         </tr>
        {% endfor %}
       </tbody>
