--- a/HotelsAppCRUD/templates/HotelsAppCRUD/Charge/room_charge_detail.html
+++ b/HotelsAppCRUD/templates/HotelsAppCRUD/Charge/room_charge_detail.html
@@ -26,6 +26,8 @@
   <p><strong>Reservation Id:</strong> {{ roomcharges.reservation_id }}</p>
   <p><strong>Service Id:</strong> {{ roomcharges.service_id }}</p>
   <p><strong>description:</strong> {{ roomcharges.description }}</p>
+  <p><strong>discount code:</strong> {{ roomcharges.discount_code }}</p>
+  <p><strong>discount price:</strong> {{ roomcharges.discount_price }}</p>
 </div>
 {% endblock %}
          <!--================ start footer Area  =================-->
