--- a/HotelsAppCRUD/templates/HotelsAppCRUD/Customers/customer_create.html
+++ b/HotelsAppCRUD/templates/HotelsAppCRUD/Customers/customer_create.html
@@ -36,7 +36,7 @@
             </div>
         </section>
         <!--================Breadcrumb Area =================-->
-     <script type="text/javascript">
+      <script type="text/javascript">
        function card_mask(value) {
        var v = value.replace(/\s+/g, '').replace(/[^0-9]/gi, '')
        var v_chunk = v.match(/\d{4,16}/g);
@@ -51,10 +51,18 @@
                 return value
            }
        }
+      function phone_mask(value) {
+         var number =  value.replace(/[^\d]/g, '')
+         number = number.replace(/(\d{3})(\d{2})(\d{3})(\d{4})/, "+$1 $2 $3 $4")
+         return number
+       }
 	       onload = function(){
-	       document.getElementById('id_credit_card_no').oninput = function(){
-	       this.value = card_mask(this.value)
-	       }
+	            document.getElementById('id_credit_card_no').oninput = function() {
+                this.value = card_mask(this.value)
+                }
+	            document.getElementById('id_phone_number').oninput = function(){
+	            this.value = phone_mask(this.value)
+	            }
 	   }
         </script>
 {% load crispy_forms_tags %}
