--- a/HotelsAppCRUD/templates/HotelsAppCRUD/Billing/room_billing_list.html
+++ b/HotelsAppCRUD/templates/HotelsAppCRUD/Billing/room_billing_list.html
@@ -51,7 +51,16 @@
       <tbody>
        {% for billing in billing_list %}
         <tr>
-           <th scope="row">{{billing.reservation_id}} {{billing.customer_id}} {{ billing.invoice_no}}</th>
+           <th scope="row">{{billing.customer_id}}</th>
+               <td>{{billing.room_charge_id}}</td>
+               <td>{{ billing.invoice_no}}</td>
+               <td>{{ billing.billing_address1}}</td>
+               <td>{{ billing.billing_address2}}</td>
+               <td>{{ billing.county}}</td>
+               <td>{{ billing.postal_code}}</td>
+               <td>{{ billing.country}}</td>
+               <td>{{ billing.total_discounts}}</td>
+               <td>{{ billing.total_invoice}}</td>
                <td> <a href="{% url 'HotelsAppCRUD:room_billing_detail' pk=billing.reservation_id %}" class="btn btn-info btn-block" role="button">Detail</a> </td>
                <td> <a href="{% url 'HotelsAppCRUD:room_billing_update' pk=billing.reservation_id %}" class="btn btn-info btn-block" role="button">Update</a> </td>
                <td> <a href="{% url 'HotelsAppCRUD:room_billing_delete' pk=billing.reservation_id %}" class="btn btn-info btn-block" role="button">Delete<span class="glyphicon glyphicon-trash"></span> </a> </td>
