--- a/HotelsAppCRUD/templates/HotelsAppCRUD/Rooms/room_list.html
+++ b/HotelsAppCRUD/templates/HotelsAppCRUD/Rooms/room_list.html
@@ -51,7 +51,13 @@
       <tbody>
        {% for room in room_list %}
         <tr>
-           <th scope="row">{{ room.room_id }}</th>
+           <th scope="row">{{ room.hotel_id }}</th>
+               <td>{{ room.room_number}}</td>
+               <td>{{ room.room_type}}</td>
+               <td>{{ room.type}}</td>
+               <td>{{ room.beds}}</td>
+               <td>{{ room.max_occupancy}}</td>
+               <td>{{ room.cost_per_night}}</td>
                <td> <a href="{% url 'HotelsAppCRUD:room_detail' pk=room.room_id %}" class="btn btn-info btn-block" role="button">Detail</a> </td>
                <td> <a href="{% url 'HotelsAppCRUD:room_update' pk=room.room_id %}" class="btn btn-info btn-block" role="button">Update</a> </td>
                <td> <a href="{% url 'HotelsAppCRUD:room_delete' pk=room.room_id %}" class="btn btn-info btn-block" role="button">Delete<span class="glyphicon glyphicon-trash"></span> </a> </td>
