--- a/HotelsAppCRUD/templates/HotelsAppCRUD/Billing/room_billing_list.html
+++ b/HotelsAppCRUD/templates/HotelsAppCRUD/Billing/room_billing_list.html
@@ -40,6 +40,7 @@
 {% block content %}
   <h1>Room Billing List</h1>
 <div class="container-fluid">
+   <div class="table-responsive">
   {% if billing_list %}
    <table class="table table-hover">
       <thead>
@@ -79,6 +80,7 @@
   {% else %}
      <p>There are no Room Billing in the database.</p>
   {% endif %}
+    </div>
 </div>
 {% endblock %}
          <!--================ start footer Area  =================-->
