--- a/HotelsAppCRUD/templates/HotelsAppCRUD/Charge/room_charge_list.html
+++ b/HotelsAppCRUD/templates/HotelsAppCRUD/Charge/room_charge_list.html
@@ -39,6 +39,7 @@
 {% block content %}
   <h1>Room Charges List</h1>
 <div class="container-fluid">
+   <div class="table-responsive">
   {% if charges_list %}
    <table class="table table-hover">
       <thead>
@@ -68,6 +69,7 @@
   {% else %}
      <p>There are no Room Charges in the database.</p>
   {% endif %}
+   </div>
 </div>
 {% endblock %}
          <!--================ start footer Area  =================-->
