--- a/HotelsAppCRUD/templates/HotelsAppCRUD/Customers/customer_list.html
+++ b/HotelsAppCRUD/templates/HotelsAppCRUD/Customers/customer_list.html
@@ -40,6 +40,7 @@
 {% block content %}
   <h1>Customer List</h1>
 <div class="container-fluid">
+   <div class="table-responsive">
   {% if customer_list %}
    <table class="table table-hover">
       <thead>
@@ -67,6 +68,7 @@
   {% else %}
      <p>There are no Customers in the database.</p>
   {% endif %}
+   </div>
 </div>
 {% endblock %}
         <!--================ start footer Area  =================-->
