--- a/HotelsAppCRUD/templates/HotelsAppCRUD/Hotels/hotel_list.html
+++ b/HotelsAppCRUD/templates/HotelsAppCRUD/Hotels/hotel_list.html
@@ -39,6 +39,7 @@
 {% block content %}
   <h1>Hotel List</h1>
 <div class="container-fluid">
+   <div class="table-responsive">
   {% if hotel_list %}
    <table class="table table-hover">
       <thead>
@@ -78,6 +79,7 @@
   {% else %}
      <p>There are no Hotels in the database.</p>
   {% endif %}
+   </div>
 </div>
 {% endblock %}
         <!--================ start footer Area  =================-->
