--- a/HotelsAppCRUD/templates/HotelsAppCRUD/Reservation/room_reservation_list.html
+++ b/HotelsAppCRUD/templates/HotelsAppCRUD/Reservation/room_reservation_list.html
@@ -40,6 +40,7 @@
 {% block content %}
   <h1>Reservation List</h1>
 <div class="container-fluid">
+   <div class="table-responsive">
   {% if reservation_list %}
    <table class="table table-hover">
       <thead>
@@ -77,6 +78,7 @@
   {% else %}
      <p>There are no Reservation in the database.</p>
   {% endif %}
+   </div>
 </div>
 {% endblock %}
         <!--================ start footer Area  =================-->
