--- a/HotelsAppCRUD/templates/HotelsAppCRUD/Rooms/room_list.html
+++ b/HotelsAppCRUD/templates/HotelsAppCRUD/Rooms/room_list.html
@@ -40,6 +40,7 @@
 {% block content %}
   <h1>Room List</h1>
 <div class="container-fluid">
+   <div class="table-responsive">
   {% if room_list %}
    <table class="table table-hover">
       <thead>
@@ -73,6 +74,7 @@
   {% else %}
      <p>There are no Room in the database.</p>
   {% endif %}
+   </div>
 </div>
 {% endblock %}
         <!--================ start footer Area  =================-->
