--- a/HotelsAppCRUD/templates/HotelsAppCRUD/Customers/customer_update.html
+++ b/HotelsAppCRUD/templates/HotelsAppCRUD/Customers/customer_update.html
@@ -22,6 +22,34 @@
     <title>Customer Update</title>
 </head>
 <body>
+      <!--================Header Area =================-->
+        <header class="header_area">
+            <div class="container">
+                <nav class="navbar navbar-expand-lg navbar-light">
+                    <!-- Brand and toggle get grouped for better mobile display -->
+                    <a class="navbar-brand logo_h" href="index.html"><img src="{% static 'image/Logo.png' %}" alt=""></a>
+                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
+                    <!-- Collect the nav links, forms, and other content for toggling -->
+                    <div class="collapse navbar-collapse offset" id="navbarSupportedContent">
+                        <ul class="nav navbar-nav menu_nav ml-auto">
+                            <li class="nav-item"><a class="nav-link" href="{% url 'HotelsApp:index' %}">Home</a></li>
+                            <li class="nav-item active"><a class="nav-link" href="{% url 'HotelsAppCRUD:customer_index' %}"> Customer Menu</a></li>
+                            <li class="nav-item"><a class="nav-link" href="{% url 'HotelsAppCRUD:hotel_index' %}">Hotel Menu</a></li>
+                            <li class="nav-item"><a class="nav-link" href="{% url 'HotelsAppCRUD:room_index' %}">Room Menu</a></li>
+                            <li class="nav-item"><a class="nav-link" href="{% url 'HotelsAppCRUD:rooms_billing_index' %}">Room Billing Menu</a></li>
+                            <li class="nav-item"><a class="nav-link" href="{% url 'HotelsAppCRUD:rooms_charge_index' %}">Room Charge Menu</a></li>
+                            <li class="nav-item"><a class="nav-link" href="{% url 'HotelsAppCRUD:rooms_reservation_index' %}">Room Reservation Menu</a></li>
+                            <li class="nav-item"><a class="nav-link" href="{% url 'HotelsAppCRUD:rooms_service_index' %}">Room Service Menu</a></li>
+                        </ul>
+                    </div>
+                </nav>
+            </div>
+        </header>
+        <!--================Header Area =================-->
       <!--================Breadcrumb Area =================-->
         <section class="breadcrumb_area blog_banner_two">
             <div class="overlay bg-parallax" data-stellar-ratio="0.8" data-stellar-vertical-offset="0" data-background=""></div>
